# sonnet

./: .gitignore
sonnet-gpt/sonnet4style-gpt-codeagent/sonnet4style-gpt/: pyproject.toml  requirements.txt
sonnet-gpt/sonnet4style-gpt-codeagent/sonnet4style-gpt/configs/: base.json
sonnet-gpt/sonnet4style-gpt-codeagent/sonnet4style-gpt/data/: tiny.txt
sonnet-gpt/sonnet4style-gpt-codeagent/sonnet4style-gpt/src/sonnet_gpt/: __init__.py  config.py  generate.py  model.py  schema.json  tokenizer.py  train.py
sonnet-gpt/sonnet4style-gpt/sonnet4style-gpt/: README.md  check_gpu.py  instructions.md
sonnet-gpt/sonnet4style-gpt/sonnet4style-gpt/configs/: sonnet4.json  tiny.json
sonnet-gpt/sonnet4style-gpt/sonnet4style-gpt/src/sonnet_gpt/: cli.py  config.py  data.py  generate.py  tokenizer.py  utils.py
