[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonnet4style-gpt"
version = "0.1.0"
description = "Minimal GPT-style model scaffold with JSON-configurable hyperparameters"
authors = [{name = "You"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "tqdm>=4.66",
    "pydantic>=2.6",
    "jsonschema>=4.21"
]

[tool.setuptools.packages.find]
where = ["src"]
